assign1/tests/type-checking/bad/types_add.c
#include "FenneC.h"

int main() {
    return 1 + 1U;
}